--- a/list.html
+++ b/list.html
@@ -14,23 +14,20 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="nav-links">
-    <a href="index.html">1. கடன் பெற்றவர் விவரம் சேர்க்கை படிவம்</a></br>
-    <a href="list.html">2. அழகிய கடன்களின் விவரம்</a></br>
-    <a href="loan.html">3. கடன் விவரம்</a>
-  </div>
   <div class="container">
     <div style="margin-top: 20px;">
       <h2 class="text-center">بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم</h2>
-      <div class="col-md-6"></div>
-      <div class="col-md-6 pull-right">
+      <div class="col-md-6">
+        <a href="javascript:history.back()" class="back-link"><i class="fa fa-angle-left"></i> Back</a>
+      </div>
+      <div class="col-md-6 pad-0 pull-right">
         <div class="form">
           <i class="fa fa-search"></i>
           <input type="text" class="form-control form-input" placeholder="Search ஆதார் நம்பர்">
         </div>
       </div>
     </div>
-    <table class="table table-hover" style="margin-top: 60px;">
+    <table class="table table-hover" style="margin-top: 80px;">
       <thead>
         <tr>
           <th>படிவம் எண்</th>
@@ -46,7 +43,7 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
+          <th scope="row">1363</th>
           <td>ஆதில்</td>
           <td><a href="loan.html">281515914393</a></td>
           <td>Pudupet, Chennai is 600002</td>
@@ -57,7 +54,7 @@
           <td>3,000</td>
         </tr>
         <tr>
-          <th scope="row">2</th>
+          <th scope="row">2342</th>
           <td>ஸியாவுல் ஹக்</td>
           <td><a href="loan.html">281515914393</a></td>
           <td>Pudupet, Chennai is 600002</td>
@@ -68,7 +65,7 @@
           <td>3,000</td>
         </tr>
         <tr>
-          <th scope="row">3</th>
+          <th scope="row">3397</th>
           <td>சலீம்</td>
           <td><a href="loan.html">281515914393</a></td>
           <td>Pudupet, Chennai is 600002</td>
@@ -79,7 +76,7 @@
           <td>3,000</td>
         </tr>
         <tr>
-          <th scope="row">4</th>
+          <th scope="row">1334</th>
           <td>அப்துல் ஹலீம்</td>
           <td><a href="loan.html">281515914393</a></td>
           <td>Pudupet, Chennai is 600002</td>
