--- a/loan.html
+++ b/loan.html
@@ -40,7 +40,7 @@
     <form class="form-filter form-inline col-12 pad-0 pull-right" style="margin-top: 50px;position: absolute;top: 120px;right: 0;width: 42%;min-width: 200px;">
       <div class="form-group col-12 pad-0">
         <label for="form-no" class="col-form-label" style="margin-right: 20px;">விண்ணப்ப எண்:</label>
-        <select class="form-control" name="form-no" aria-label="Default select example">
+        <select class="form-control" name="form-no" aria-label="Default select example" style="padding: 0 10px;">
           <option value="1" selected>3724</option>
           <option value="2">2673</option>
           <option value="3">1837</option>
