repay screen added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1 class="text-center">அழகிய கடன் அறக்கட்டளை</h1>
     <div class="nav-links">
       <a href="application.html">சேர்க்கை படிவம்</a></br>
+      <a href="repay.html">தவணை செலுத்த</a></br>
       <a href="list.html">கடன்களின் விவரம்</a></br>
     </div>
   </div>
