--- a/repay.html
+++ b/repay.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="javascript:history.back()" class="back-link" style="margin-top: 20px;display: inline-block;"><i class="fa fa-angle-left"></i> Back</a>
+    <a href="index.html" class="back-link" style="margin-top: 20px;display: inline-block;"><i class="fa fa-angle-left"></i> Home</a>
     <form class="loan-app" action="loan.html">
       <h2 class="text-center">بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيم</h2>
       <h1 class="text-center">அழகிய கடன் அறக்கட்டளை</h1>
